# hx-diff

./: Cargo.toml  README.md  TODO.md  rust-toolchain.toml
git_cli_wrap/: Cargo.toml
git_cli_wrap/src/: lib.rs
hx_diff/: Cargo.toml
hx_diff/src/: common.rs  main.rs  syntax.rs  views.rs  workspace.rs
hx_diff/src/views/: diff_pane.rs  file_list.rs  hx_diff.rs
hx_diff/src/views/diff_pane/: diff_element.rs
