[workspace]

members = ["git_cli_wrap", "hx_diff"]

resolver = "2"

# Need to align with the overriden version of tree-sitter that the zed repo uses, as their declared
# version in their Cargo.toml is inaccurate.
[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "e4a23971ec3071a09c1e84816954c98f96e98e52" }
