[workspace]

members = ["git_cli_wrap", "hx_diff"]

resolver = "2"

# Need to align with the overriden version of tree-sitter that the zed repo uses, as their declared
# version in their Cargo.toml is inaccurate.
[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "7b4894ba2ae81b988846676f54c0988d4027ef4f" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", rev = "30419d07660dc11a21e42ef4a7fa329600cff152" }
