[package]
name = "hx_diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git_cli_wrap = { path = "../git_cli_wrap" }

clap = { version = "4.5.4", features = ["derive"] }
similar = "2.5.0"

gpui = { git = "https://github.com/zed-industries/zed", rev = "4c28d2c2e26e64cb9b4131a39e23e0265c7263f7" }
theme = { git = "https://github.com/zed-industries/zed", rev = "4c28d2c2e26e64cb9b4131a39e23e0265c7263f7" }
settings = { git = "https://github.com/zed-industries/zed", rev = "4c28d2c2e26e64cb9b4131a39e23e0265c7263f7" }
assets = { git = "https://github.com/zed-industries/zed", rev = "4c28d2c2e26e64cb9b4131a39e23e0265c7263f7" }
ui = { git = "https://github.com/zed-industries/zed", rev = "4c28d2c2e26e64cb9b4131a39e23e0265c7263f7" }
