[package]
name = "hx_diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git_cli_wrap = { path = "../git_cli_wrap" }

clap = { version = "4.5.4", features = ["derive"] }
similar = "2.5.0"

gpui = { git = "https://github.com/zed-industries/zed", rev = "305206fd483076db9c021315e1840f2000c83d74" }
theme = { git = "https://github.com/zed-industries/zed", rev = "305206fd483076db9c021315e1840f2000c83d74" }
settings = { git = "https://github.com/zed-industries/zed", rev = "305206fd483076db9c021315e1840f2000c83d74" }
assets = { git = "https://github.com/zed-industries/zed", rev = "305206fd483076db9c021315e1840f2000c83d74" }
ui = { git = "https://github.com/zed-industries/zed", rev = "305206fd483076db9c021315e1840f2000c83d74" }
